--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Splash#index</h1>
-<p>Find me in app/views/splash/index.html.erb</p>
+<p>Welcome to the Splash page!</p>
+
+<!-- Link to the login page -->
+<%= link_to "Login", new_user_session_path %>
+
+<!-- Link to the sign-up (registration) page -->
+<%= link_to "Sign Up", new_user_registration_path %>
